--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>hello</h1>
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <nav class="nav">
+      <h2>sixteen <span>clothing</span> </h2>
+      <ul class="nav-list">
+        <a href="">home</a>
+        <a href="">our product</a>
+        <a href="">about us</a>
+        <a href="">contact us</a>
+      </ul>
+    </nav>
+    <div class="hero-section">
+        <div class="hero-text">
+            <h3>BEST OFFER</h3>
+            <h1>NEW ARRIVALES ON SALE</h1>
+        </div>
+    </div>
+
+  </body>
 </html>
